--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Lofi player",
   "main": "main.js",
   "author": {
-    "name" : "Tyler Hardy",
-    "email" : "tylerthardy@gmail.com",
-    "url" : "https://github.com/tylerthardy"
+    "name": "Tyler Hardy",
+    "email": "tylerthardy@gmail.com",
+    "url": "https://github.com/tylerthardy"
   },
   "scripts": {
     "start": "electron-forge start",
@@ -22,7 +22,8 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.59",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.59",
     "@electron-forge/maker-zip": "^6.0.0-beta.59",
-    "electron": "^13.2.1"
+    "electron": "^13.2.1",
+    "electron-reload": "^2.0.0-alpha.1"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
